--- a/css/style.css
+++ b/css/style.css
@@ -66,9 +66,7 @@
     margin-top: 15px;
 }
 
-.links:hover{
-   
-}
+
 
 .links:hover > :not(:hover){
     transform: scale(.8);
@@ -91,7 +89,7 @@
 .about__conteudo {
     background-color: var(--fundoAzul);
     width: 100%;
-    height: 300px;
+    height: 350px;
     padding: 16px;
     
 }
@@ -248,7 +246,7 @@
 
 
 
-.projetos__item {}
+
 
 .projetos__item__descricao h4 {
     margin-top: 5px;
@@ -329,4 +327,21 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+
+/* FIM MOBILE */
+
+/* INICIO TABLET */
+
+@media(min-width: 834px){
+
+
+
+
+
+
+
+
+
 }
