--- a/css/style.css
+++ b/css/style.css
@@ -7,12 +7,14 @@
     font-family: "Raleway", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
-    font-weight: 650;
-    
-    
-   
+    font-weight: 600;
+
+
+
 
 }
+
+
 
 .cabecalho {
     display: flex;
@@ -22,7 +24,7 @@
     height: 56px;
     padding: 16px;
 
- 
+
 
 }
 
@@ -34,11 +36,13 @@
     margin: 13px;
 }
 
+
+
 .principal__header {
     margin-left: 13px;
 }
 
-.principal__header p{
+.principal__header p {
     margin-top: 15px;
 }
 
@@ -56,23 +60,40 @@
 
 }
 
+.principal__links {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: nowrap;
+    width: 100%;
+    height: 50px;
+    
+}
 
 
 .links {
     display: flex;
+    width: 100%;
     justify-content: center;
+    align-items: center;
     flex-wrap: nowrap;
     gap: 5%;
-    margin-top: 15px;
+    margin: 5px;
+
+
+
 }
 
 
 
-.links:hover > :not(:hover){
+
+
+
+.links:hover> :not(:hover) {
     transform: scale(.8);
     opacity: .4;
     transition: .7s;
-    
+
 }
 
 
@@ -91,11 +112,11 @@
     width: 100%;
     height: 400px;
     padding: 16px;
-    
+
 }
 
-.about__conteudo p{
- padding: 5px 0px;
+.about__conteudo p {
+    padding: 5px 0px;
 }
 
 /* SKILLS */
@@ -307,7 +328,7 @@
     opacity: 1;
     transform: scale(1.1);
     color: var(--corPreta);
-    
+
 
 }
 
@@ -340,8 +361,4 @@
 
 
 
-@media(min-width: 834px){
-
-
-
-}
+@media(min-width: 834px) {}
