--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@
     justify-content: center;
     align-items: center;
     flex-wrap: nowrap;
-    gap: 5%;
+    gap: 15px;
     margin: 5px;
 
 
