--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,19 @@
 }
 
 
+.links li{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: nowrap;
+    gap: 15px;
+    margin: 5px;
+  
 
+
+}
 
 
 
