--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,8 @@
 .links {
     display: flex;
     width: 100%;
+    height: 50px;
+    background-color: aqua;
     justify-content: center;
     align-items: center;
     flex-wrap: nowrap;
@@ -87,12 +89,13 @@
 
 .links li{
     display: flex;
-    width: 50%;    
+    width: 100%;    
+    height: 100%;
     justify-content: center;
     align-items: center;
     flex-wrap: nowrap;
-    margin: 5px;
-  
+    background-color: #ff0000;
+    
   
 
 
